[gd_scene load_steps=6 format=4 uid="uid://c8xl74uldp0k0"]

[ext_resource type="Script" path="res://Game/UserInterface/settings.gd" id="1_o065x"]
[ext_resource type="Texture2D" uid="uid://dv4eykwb2orxt" path="res://Assets/rpgiab_icon_pack_v1.3/32x32/delete.png" id="2_3c3x0"]
[ext_resource type="LabelSettings" uid="uid://btd1oqmfa7ni0" path="res://Assets/text_settings.tres" id="2_4sdxo"]
[ext_resource type="Texture2D" uid="uid://c7p13psuw4gs3" path="res://Assets/img/popup_background.png" id="3_batpm"]
[ext_resource type="TileSet" uid="uid://34cqn0mav1us" path="res://Assets/menu.tres" id="4_hoy6d"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o065x")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.0
offset_top = -108.0
offset_right = 258.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.17225, 1.17225)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Audio_Text" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volumen General:"
label_settings = ExtResource("2_4sdxo")

[node name="Audio" type="HSlider" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -40.0
max_value = 0.0

[node name="Musica_Text" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volumen de la musica:"
label_settings = ExtResource("2_4sdxo")

[node name="Musica" type="HSlider" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -40.0
max_value = 0.0
value = -20.0

[node name="Efectos_Text" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volumen de los efectos de sonido:"
label_settings = ExtResource("2_4sdxo")

[node name="Efectos" type="HSlider" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -40.0
max_value = 0.0
value = -20.0

[node name="Cerrar" type="Button" parent="CanvasLayer"]
offset_left = 995.0
offset_top = 109.0
offset_right = 1035.0
offset_bottom = 149.0
icon = ExtResource("2_3c3x0")
flat = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(310, 120)
tile_map_data = PackedByteArray("AAD+////AAASAAEAAAD+/wAAAAASAAIAAAD+/wEAAAASAAMAAAD+/wIAAAASAAQAAAD+/wMAAAASAAUAAAD+/wQAAAASAAYAAAD+/wUAAAASAAcAAAD/////AAATAAEAAAD//wAAAAATAAIAAAD//wEAAAATAAMAAAD//wIAAAATAAQAAAD//wMAAAATAAUAAAD//wQAAAATAAYAAAD//wUAAAATAAcAAAAAAP//AAAUAAEAAAAAAAAAAAAUAAIAAAAAAAEAAAAUAAMAAAAAAAIAAAAUAAQAAAAAAAMAAAAUAAUAAAAAAAQAAAAUAAYAAAAAAAUAAAAUAAcAAAABAP//AAAVAAEAAAABAAAAAAAVAAIAAAABAAEAAAAVAAMAAAABAAIAAAAVAAQAAAABAAMAAAAVAAUAAAABAAQAAAAVAAYAAAABAAUAAAAVAAcAAAACAP//AAAWAAEAAAACAAAAAAAWAAIAAAACAAEAAAAWAAMAAAACAAIAAAAWAAQAAAACAAMAAAAWAAUAAAACAAQAAAAWAAYAAAACAAUAAAAYAAUAAAADAP//AAAXAAEAAAADAAAAAAAXAAIAAAADAAEAAAAXAAMAAAADAAIAAAAXAAQAAAADAAMAAAAXAAUAAAADAAQAAAAXAAYAAAADAAUAAAAZAAUAAAAEAP//AAAYAAEAAAAEAAAAAAAYAAIAAAAEAAEAAAAYAAMAAAAEAAIAAAAYAAQAAAAEAAMAAAAYAAUAAAAEAAQAAAAYAAYAAAAEAAUAAAAaAAUAAAAoAP7/AAAtAAAAAAAoAP//AAAtAAEAAAAoAAAAAAAtAAIAAAAoAAEAAAAtAAMAAAAoAAIAAAAtAAQAAAAoAAMAAAAtAAUAAAAoAAQAAAAtAAYAAAAoAAUAAAAqAAUAAAApAP7/AAAuAAAAAAApAP//AAAuAAEAAAApAAAAAAAuAAIAAAApAAEAAAAuAAMAAAApAAIAAAAuAAQAAAApAAMAAAAuAAUAAAApAAQAAAAuAAYAAAApAAUAAAArAAUAAAAqAP7/AAAvAAAAAAAqAP//AAAvAAEAAAAqAAAAAAAvAAIAAAAqAAEAAAAvAAMAAAAqAAIAAAAvAAQAAAAqAAMAAAAvAAUAAAAqAAQAAAAvAAYAAAAqAAUAAAAsAAUAAAArAP7/AAAwAAAAAAArAP//AAAwAAEAAAArAAAAAAAwAAIAAAArAAEAAAAwAAMAAAArAAIAAAAwAAQAAAArAAMAAAAwAAUAAAArAAQAAAAwAAYAAAArAAUAAAAwAAcAAAAsAP7/AAAxAAAAAAAsAP//AAAxAAEAAAAsAAAAAAAxAAIAAAAsAAEAAAAxAAMAAAAsAAIAAAAxAAQAAAAsAAMAAAAxAAUAAAAsAAQAAAAxAAYAAAAsAAUAAAAxAAcAAAAtAP7/AAAyAAAAAAAtAP//AAAyAAEAAAAtAAAAAAAyAAIAAAAtAAEAAAAyAAMAAAAtAAIAAAAyAAQAAAAtAAMAAAAyAAUAAAAtAAQAAAAyAAYAAAAtAAUAAAAyAAcAAAAFAP7/AAAXAAAAAAAFAP//AAAXAAEAAAAFAAAAAAAXAAIAAAAFAAEAAAAXAAMAAAAFAAIAAAAXAAQAAAAFAAMAAAAYAAUAAAAGAP7/AAAYAAAAAAAGAP//AAAYAAEAAAAGAAAAAAAYAAIAAAAGAAEAAAAYAAMAAAAGAAIAAAAYAAQAAAAGAAMAAAAZAAUAAAAHAP7/AAAZAAAAAAAHAP//AAAZAAEAAAAHAAAAAAAZAAIAAAAHAAEAAAAZAAMAAAAHAAIAAAAZAAQAAAAHAAMAAAAaAAUAAAAIAP7/AAAaAAAAAAAIAP//AAAaAAEAAAAIAAAAAAAaAAIAAAAIAAEAAAAaAAMAAAAIAAIAAAAaAAQAAAAIAAMAAAAbAAUAAAAJAP7/AAAbAAAAAAAJAP//AAAbAAEAAAAJAAAAAAAbAAIAAAAJAAEAAAAbAAMAAAAJAAIAAAAbAAQAAAAJAAMAAAAcAAUAAAAKAP7/AAAcAAAAAAAKAP//AAAcAAEAAAAKAAAAAAAcAAIAAAAKAAEAAAAcAAMAAAAKAAIAAAAcAAQAAAAKAAMAAAAdAAUAAAALAP7/AAAdAAAAAAALAP//AAAdAAEAAAALAAAAAAAdAAIAAAALAAEAAAAdAAMAAAALAAIAAAAdAAQAAAALAAMAAAAeAAUAAAAMAP7/AAAeAAAAAAAMAP//AAAeAAEAAAAMAAAAAAAeAAIAAAAMAAEAAAAeAAMAAAAMAAIAAAAeAAQAAAAMAAMAAAAfAAUAAAANAP7/AAAfAAAAAAANAP//AAAfAAEAAAANAAAAAAAfAAIAAAANAAEAAAAfAAMAAAANAAIAAAAfAAQAAAANAAMAAAAgAAUAAAAOAP7/AAAgAAAAAAAOAP//AAAgAAEAAAAOAAAAAAAgAAIAAAAOAAEAAAAgAAMAAAAOAAIAAAAgAAQAAAAOAAMAAAAhAAUAAAAPAP7/AAAhAAAAAAAPAP//AAAhAAEAAAAPAAAAAAAhAAIAAAAPAAEAAAAhAAMAAAAPAAIAAAAhAAQAAAAPAAMAAAAiAAUAAAAQAP7/AAAiAAAAAAAQAP//AAAiAAEAAAAQAAAAAAAiAAIAAAAQAAEAAAAiAAMAAAAQAAIAAAAiAAQAAAAQAAMAAAAjAAUAAAARAP7/AAAjAAAAAAARAP//AAAjAAEAAAARAAAAAAAjAAIAAAARAAEAAAAjAAMAAAARAAIAAAAjAAQAAAARAAMAAAAkAAUAAAASAP7/AAAXAAAAAAASAP//AAAXAAEAAAASAAAAAAAXAAIAAAASAAEAAAAXAAMAAAASAAIAAAAXAAQAAAASAAMAAAAlAAUAAAATAP7/AAAYAAAAAAATAP//AAAYAAEAAAATAAAAAAAYAAIAAAATAAEAAAAYAAMAAAATAAIAAAAYAAQAAAATAAMAAAAmAAUAAAAUAP7/AAAZAAAAAAAUAP//AAAZAAEAAAAUAAAAAAAZAAIAAAAUAAEAAAAZAAMAAAAUAAIAAAAZAAQAAAAUAAMAAAAnAAUAAAAVAP7/AAAaAAAAAAAVAP//AAAaAAEAAAAVAAAAAAAaAAIAAAAVAAEAAAAaAAMAAAAVAAIAAAAaAAQAAAAVAAMAAAAoAAUAAAAWAP7/AAAbAAAAAAAWAP//AAAbAAEAAAAWAAAAAAAbAAIAAAAWAAEAAAAbAAMAAAAWAAIAAAAbAAQAAAAWAAMAAAApAAUAAAAXAP7/AAAcAAAAAAAXAP//AAAcAAEAAAAXAAAAAAAcAAIAAAAXAAEAAAAcAAMAAAAXAAIAAAAcAAQAAAAXAAMAAAAqAAUAAAAYAP7/AAAdAAAAAAAYAP//AAAdAAEAAAAYAAAAAAAdAAIAAAAYAAEAAAAdAAMAAAAYAAIAAAAdAAQAAAAYAAMAAAArAAUAAAAZAP7/AAAeAAAAAAAZAP//AAAeAAEAAAAZAAAAAAAeAAIAAAAZAAEAAAAeAAMAAAAZAAIAAAAeAAQAAAAZAAMAAAAsAAUAAAAaAP7/AAAfAAAAAAAaAP//AAAfAAEAAAAaAAAAAAAfAAIAAAAaAAEAAAAfAAMAAAAaAAIAAAAfAAQAAAAaAAMAAAAfAAUAAAAbAP7/AAAgAAAAAAAbAP//AAAgAAEAAAAbAAAAAAAgAAIAAAAbAAEAAAAgAAMAAAAbAAIAAAAgAAQAAAAbAAMAAAAgAAUAAAAcAP7/AAAhAAAAAAAcAP//AAAhAAEAAAAcAAAAAAAhAAIAAAAcAAEAAAAhAAMAAAAcAAIAAAAhAAQAAAAcAAMAAAAhAAUAAAAdAP7/AAAiAAAAAAAdAP//AAAiAAEAAAAdAAAAAAAiAAIAAAAdAAEAAAAiAAMAAAAdAAIAAAAiAAQAAAAdAAMAAAAiAAUAAAAeAP7/AAAjAAAAAAAeAP//AAAjAAEAAAAeAAAAAAAjAAIAAAAeAAEAAAAjAAMAAAAeAAIAAAAjAAQAAAAeAAMAAAAjAAUAAAAfAP7/AAAkAAAAAAAfAP//AAAkAAEAAAAfAAAAAAAkAAIAAAAfAAEAAAAkAAMAAAAfAAIAAAAkAAQAAAAfAAMAAAAkAAUAAAAgAP7/AAAlAAAAAAAgAP//AAAlAAEAAAAgAAAAAAAlAAIAAAAgAAEAAAAlAAMAAAAgAAIAAAAlAAQAAAAgAAMAAAAlAAUAAAAhAP7/AAAmAAAAAAAhAP//AAAmAAEAAAAhAAAAAAAmAAIAAAAhAAEAAAAmAAMAAAAhAAIAAAAmAAQAAAAhAAMAAAAmAAUAAAAiAP7/AAAnAAAAAAAiAP//AAAnAAEAAAAiAAAAAAAnAAIAAAAiAAEAAAAnAAMAAAAiAAIAAAAnAAQAAAAiAAMAAAAnAAUAAAAjAP7/AAAoAAAAAAAjAP//AAAoAAEAAAAjAAAAAAAoAAIAAAAjAAEAAAAoAAMAAAAjAAIAAAAoAAQAAAAjAAMAAAAoAAUAAAAkAP7/AAApAAAAAAAkAP//AAApAAEAAAAkAAAAAAApAAIAAAAkAAEAAAApAAMAAAAkAAIAAAApAAQAAAAkAAMAAAApAAUAAAAlAP7/AAAqAAAAAAAlAP//AAAqAAEAAAAlAAAAAAAqAAIAAAAlAAEAAAAqAAMAAAAlAAIAAAAqAAQAAAAlAAMAAAAqAAUAAAAmAP7/AAArAAAAAAAmAP//AAArAAEAAAAmAAAAAAArAAIAAAAmAAEAAAArAAMAAAAmAAIAAAArAAQAAAAmAAMAAAArAAUAAAAnAP7/AAAsAAAAAAAnAP//AAAsAAEAAAAnAAAAAAAsAAIAAAAnAAEAAAAsAAMAAAAnAAIAAAAsAAQAAAAnAAMAAAAsAAUAAAD+/xQAAAASAAsAAAD+/xUAAAASAAwAAAD+/xYAAAASAA0AAAD+/xcAAAASAA4AAAD+/xgAAAASAA8AAAD+/xkAAAASABAAAAD+/xoAAAASABEAAAD//xQAAAATAAsAAAD//xUAAAATAAwAAAD//xYAAAATAA0AAAD//xcAAAATAA4AAAD//xgAAAATAA8AAAD//xkAAAATABAAAAD//xoAAAATABEAAAAAABQAAAAUAAsAAAAAABUAAAAUAAwAAAAAABYAAAAUAA0AAAAAABcAAAAUAA4AAAAAABgAAAAUAA8AAAAAABkAAAAUABAAAAAAABoAAAAUABEAAAABABQAAAAVAAsAAAABABUAAAAVAAwAAAABABYAAAAVAA0AAAABABcAAAAVAA4AAAABABgAAAAVAA8AAAABABkAAAAVABAAAAABABoAAAAVABEAAAACABQAAAAWAAsAAAACABUAAAAWAAwAAAACABYAAAAWAA0AAAACABcAAAAWAA4AAAACABgAAAAWAA8AAAACABkAAAAWABAAAAACABoAAAAWABEAAAADABQAAAAcAAwAAAADABUAAAAXAAwAAAADABYAAAAXAA0AAAADABcAAAAXAA4AAAADABgAAAAXAA8AAAADABkAAAAXABAAAAADABoAAAAXABEAAAAEABQAAAAdAAwAAAAEABUAAAAYAAwAAAAEABYAAAAYAA0AAAAEABcAAAAYAA4AAAAEABgAAAAYAA8AAAAEABkAAAAYABAAAAAEABoAAAAYABEAAAAFABQAAAAeAAwAAAAFABUAAAAZAAwAAAAFABYAAAAZAA0AAAAFABcAAAAZAA4AAAAFABgAAAAZAA8AAAAFABkAAAAZABAAAAAFABoAAAAZABEAAAAlABQAAAAlAAwAAAAlABUAAAAqAAwAAAAlABYAAAAqAA0AAAAlABcAAAAqAA4AAAAlABgAAAAqAA8AAAAlABkAAAAqABAAAAAlABoAAAAqABEAAAAmABQAAAAmAAwAAAAmABUAAAArAAwAAAAmABYAAAArAA0AAAAmABcAAAArAA4AAAAmABgAAAArAA8AAAAmABkAAAArABAAAAAmABoAAAArABEAAAAnABQAAAAnAAwAAAAnABUAAAAsAAwAAAAnABYAAAAsAA0AAAAnABcAAAAsAA4AAAAnABgAAAAsAA8AAAAnABkAAAAsABAAAAAnABoAAAAsABEAAAAoABQAAAAoAAwAAAAoABUAAAAtAAwAAAAoABYAAAAtAA0AAAAoABcAAAAtAA4AAAAoABgAAAAtAA8AAAAoABkAAAAtABAAAAAoABoAAAAtABEAAAApABQAAAApAAwAAAApABUAAAAuAAwAAAApABYAAAAuAA0AAAApABcAAAAuAA4AAAApABgAAAAuAA8AAAApABkAAAAuABAAAAApABoAAAAuABEAAAAqABQAAAAqAAwAAAAqABUAAAAvAAwAAAAqABYAAAAvAA0AAAAqABcAAAAvAA4AAAAqABgAAAAvAA8AAAAqABkAAAAvABAAAAAqABoAAAAvABEAAAArABQAAAAwAAsAAAArABUAAAAwAAwAAAArABYAAAAwAA0AAAArABcAAAAwAA4AAAArABgAAAAwAA8AAAArABkAAAAwABAAAAArABoAAAAwABEAAAAsABQAAAAxAAsAAAAsABUAAAAxAAwAAAAsABYAAAAxAA0AAAAsABcAAAAxAA4AAAAsABgAAAAxAA8AAAAsABkAAAAxABAAAAAsABoAAAAxABEAAAAtABQAAAAyAAsAAAAtABUAAAAyAAwAAAAtABYAAAAyAA0AAAAtABcAAAAyAA4AAAAtABgAAAAyAA8AAAAtABkAAAAyABAAAAAtABoAAAAyABEAAAAGABQAAAAfAAwAAAAGABUAAAAaAAwAAAAGABYAAAAaAA0AAAAGABcAAAAaAA4AAAAGABgAAAAaAA8AAAAGABkAAAAaABAAAAAGABoAAAAaABEAAAAHABQAAAAgAAwAAAAHABUAAAAbAAwAAAAHABYAAAAbAA0AAAAHABcAAAAbAA4AAAAHABgAAAAbAA8AAAAHABkAAAAbABAAAAAHABoAAAAbABEAAAAIABQAAAAhAAwAAAAIABUAAAAcAAwAAAAIABYAAAAcAA0AAAAIABcAAAAcAA4AAAAIABgAAAAcAA8AAAAIABkAAAAcABAAAAAIABoAAAAcABEAAAAJABQAAAAiAAwAAAAJABUAAAAdAAwAAAAJABYAAAAdAA0AAAAJABcAAAAdAA4AAAAJABgAAAAdAA8AAAAJABkAAAAdABAAAAAJABoAAAAdABEAAAAKABQAAAAjAAwAAAAKABUAAAAeAAwAAAAKABYAAAAeAA0AAAAKABcAAAAeAA4AAAAKABgAAAAeAA8AAAAKABkAAAAeABAAAAAKABoAAAAeABEAAAALABQAAAAkAAwAAAALABUAAAAfAAwAAAALABYAAAAfAA0AAAALABcAAAAfAA4AAAALABgAAAAfAA8AAAALABkAAAAfABAAAAALABoAAAAfABEAAAAMABQAAAAlAAwAAAAMABUAAAAgAAwAAAAMABYAAAAgAA0AAAAMABcAAAAgAA4AAAAMABgAAAAgAA8AAAAMABkAAAAgABAAAAAMABoAAAAgABEAAAANABQAAAAmAAwAAAANABUAAAAhAAwAAAANABYAAAAhAA0AAAANABcAAAAhAA4AAAANABgAAAAhAA8AAAANABkAAAAhABAAAAANABoAAAAhABEAAAAOABQAAAAnAAwAAAAOABUAAAAiAAwAAAAOABYAAAAiAA0AAAAOABcAAAAiAA4AAAAOABgAAAAiAA8AAAAOABkAAAAiABAAAAAOABoAAAAiABEAAAAPABQAAAAbAAwAAAAPABUAAAAjAAwAAAAPABYAAAAjAA0AAAAPABcAAAAjAA4AAAAPABgAAAAjAA8AAAAPABkAAAAjABAAAAAPABoAAAAjABEAAAAQABQAAAAcAAwAAAAQABUAAAAkAAwAAAAQABYAAAAkAA0AAAAQABcAAAAkAA4AAAAQABgAAAAkAA8AAAAQABkAAAAkABAAAAAQABoAAAAkABEAAAARABQAAAAdAAwAAAARABUAAAAlAAwAAAARABYAAAAlAA0AAAARABcAAAAlAA4AAAARABgAAAAlAA8AAAARABkAAAAlABAAAAARABoAAAAlABEAAAASABQAAAAeAAwAAAASABUAAAAmAAwAAAASABYAAAAmAA0AAAASABcAAAAmAA4AAAASABgAAAAmAA8AAAASABkAAAAmABAAAAASABoAAAAmABEAAAATABQAAAAbAAwAAAATABUAAAAnAAwAAAATABYAAAAnAA0AAAATABcAAAAnAA4AAAATABgAAAAnAA8AAAATABkAAAAnABAAAAATABoAAAAnABEAAAAUABQAAAAcAAwAAAAUABUAAAAoAAwAAAAUABYAAAAoAA0AAAAUABcAAAAoAA4AAAAUABgAAAAoAA8AAAAUABkAAAAoABAAAAAUABoAAAAoABEAAAAVABQAAAAdAAwAAAAVABUAAAAaAAwAAAAVABYAAAAaAA0AAAAVABcAAAAaAA4AAAAVABgAAAAaAA8AAAAVABkAAAAaABAAAAAVABoAAAAaABEAAAAWABQAAAAeAAwAAAAWABUAAAAbAAwAAAAWABYAAAAbAA0AAAAWABcAAAAbAA4AAAAWABgAAAAbAA8AAAAWABkAAAAbABAAAAAWABoAAAAbABEAAAAXABQAAAAfAAwAAAAXABUAAAAcAAwAAAAXABYAAAAcAA0AAAAXABcAAAAcAA4AAAAXABgAAAAcAA8AAAAXABkAAAAcABAAAAAXABoAAAAcABEAAAAYABQAAAAbAAwAAAAYABUAAAAdAAwAAAAYABYAAAAdAA0AAAAYABcAAAAdAA4AAAAYABgAAAAdAA8AAAAYABkAAAAdABAAAAAYABoAAAAdABEAAAAZABQAAAAcAAwAAAAZABUAAAAeAAwAAAAZABYAAAAeAA0AAAAZABcAAAAeAA4AAAAZABgAAAAeAA8AAAAZABkAAAAeABAAAAAZABoAAAAeABEAAAAaABQAAAAdAAwAAAAaABUAAAAfAAwAAAAaABYAAAAfAA0AAAAaABcAAAAfAA4AAAAaABgAAAAfAA8AAAAaABkAAAAfABAAAAAaABoAAAAfABEAAAAbABQAAAAbAAwAAAAbABUAAAAgAAwAAAAbABYAAAAgAA0AAAAbABcAAAAgAA4AAAAbABgAAAAgAA8AAAAbABkAAAAgABAAAAAbABoAAAAgABEAAAAcABQAAAAcAAwAAAAcABUAAAAhAAwAAAAcABYAAAAhAA0AAAAcABcAAAAhAA4AAAAcABgAAAAhAA8AAAAcABkAAAAhABAAAAAcABoAAAAhABEAAAAdABQAAAAdAAwAAAAdABUAAAAiAAwAAAAdABYAAAAiAA0AAAAdABcAAAAiAA4AAAAdABgAAAAiAA8AAAAdABkAAAAiABAAAAAdABoAAAAiABEAAAAeABQAAAAeAAwAAAAeABUAAAAjAAwAAAAeABYAAAAjAA0AAAAeABcAAAAjAA4AAAAeABgAAAAjAA8AAAAeABkAAAAjABAAAAAeABoAAAAjABEAAAAfABQAAAAfAAwAAAAfABUAAAAkAAwAAAAfABYAAAAkAA0AAAAfABcAAAAkAA4AAAAfABgAAAAkAA8AAAAfABkAAAAkABAAAAAfABoAAAAkABEAAAAgABQAAAAgAAwAAAAgABUAAAAlAAwAAAAgABYAAAAlAA0AAAAgABcAAAAlAA4AAAAgABgAAAAlAA8AAAAgABkAAAAlABAAAAAgABoAAAAlABEAAAAhABQAAAAhAAwAAAAhABUAAAAmAAwAAAAhABYAAAAmAA0AAAAhABcAAAAmAA4AAAAhABgAAAAmAA8AAAAhABkAAAAmABAAAAAhABoAAAAmABEAAAAiABQAAAAiAAwAAAAiABUAAAAnAAwAAAAiABYAAAAnAA0AAAAiABcAAAAnAA4AAAAiABgAAAAnAA8AAAAiABkAAAAnABAAAAAiABoAAAAnABEAAAAjABQAAAAjAAwAAAAjABUAAAAoAAwAAAAjABYAAAAoAA0AAAAjABcAAAAoAA4AAAAjABgAAAAoAA8AAAAjABkAAAAoABAAAAAjABoAAAAoABEAAAAkABQAAAAkAAwAAAAkABUAAAApAAwAAAAkABYAAAApAA0AAAAkABcAAAApAA4AAAAkABgAAAApAA8AAAAkABkAAAApABAAAAAkABoAAAApABEAAAAqAAsAAAAsAAUAAAAqAAwAAAAsAAYAAAAqAA0AAAAsAAcAAAAqAA4AAAAsAAgAAAAqAA8AAAAvAAkAAAAqABAAAAAvAAoAAAAqABEAAAAvAAsAAAAqABIAAAAqAAoAAAAqABMAAAAqAAsAAAArAAsAAAAwAAgAAAArAAwAAAAwAAYAAAArAA0AAAAwAAcAAAArAA4AAAAwAAgAAAArAA8AAAAwAAkAAAArABAAAAAwAAoAAAArABEAAAAwAAsAAAArABIAAAAwAAwAAAArABMAAAAwAA0AAAAsAAsAAAAxAAgAAAAsAAwAAAAxAAYAAAAsAA0AAAAxAAcAAAAsAA4AAAAxAAgAAAAsAA8AAAAxAAkAAAAsABAAAAAxAAoAAAAsABEAAAAxAAsAAAAsABIAAAAxAAwAAAAsABMAAAAxAA0AAAAtAAsAAAAyAAgAAAAtAAwAAAAyAAYAAAAtAA0AAAAyAAcAAAAtAA4AAAAyAAgAAAAtAA8AAAAyAAkAAAAtABAAAAAyAAoAAAAtABEAAAAyAAsAAAAtABIAAAAyAAwAAAAtABMAAAAyAA0AAAAqAAYAAAAsAAYAAAAqAAcAAAAsAAUAAAAqAAgAAAAsAAUAAAAqAAkAAAAsAAYAAAArAAYAAAAwAAUAAAArAAcAAAAwAAYAAAArAAgAAAAwAAUAAAArAAkAAAAwAAYAAAAsAAYAAAAxAAUAAAAsAAcAAAAxAAYAAAAsAAgAAAAxAAUAAAAsAAkAAAAxAAYAAAAtAAYAAAAyAAUAAAAtAAcAAAAyAAYAAAAtAAgAAAAyAAUAAAAtAAkAAAAyAAYAAAAqAAoAAAAsAAcAAAArAAoAAAAwAAcAAAAsAAoAAAAxAAcAAAAtAAoAAAAyAAcAAAD+/wYAAAASAAUAAAD+/wcAAAASAAYAAAD+/wgAAAASAAcAAAD+/wkAAAASAAgAAAD//wYAAAATAAUAAAD//wcAAAATAAYAAAD//wgAAAATAAcAAAD//wkAAAATAAgAAAAAAAYAAAAUAAUAAAAAAAcAAAAUAAYAAAAAAAgAAAAUAAcAAAAAAAkAAAAUAAgAAAABAAYAAAAVAAUAAAABAAcAAAAVAAYAAAABAAgAAAAVAAcAAAABAAkAAAAVAAgAAAD+/woAAAASAAUAAAD+/wsAAAASAAYAAAD+/wwAAAASAAcAAAD+/w0AAAASAAgAAAD//woAAAATAAUAAAD//wsAAAATAAYAAAD//wwAAAATAAcAAAD//w0AAAATAAgAAAAAAAoAAAAUAAUAAAAAAAsAAAAUAAYAAAAAAAwAAAAUAAcAAAAAAA0AAAAUAAgAAAABAAoAAAAVAAUAAAABAAsAAAAVAAYAAAABAAwAAAAVAAcAAAABAA0AAAAVAAgAAAD+/w4AAAASAAgAAAD+/w8AAAASAAkAAAD+/xAAAAASAAoAAAD+/xEAAAASAAsAAAD+/xIAAAASAAwAAAD+/xMAAAASAA0AAAD//w4AAAATAAgAAAD//w8AAAATAAkAAAD//xAAAAATAAoAAAD//xEAAAATAAsAAAD//xIAAAATAAwAAAD//xMAAAATAA0AAAAAAA4AAAAUAAgAAAAAAA8AAAAUAAkAAAAAABAAAAAUAAoAAAAAABEAAAAUAAsAAAAAABIAAAAUAAwAAAAAABMAAAAUAAoAAAABAA4AAAAVAAgAAAABAA8AAAAVAAkAAAABABAAAAAVAAoAAAABABEAAAAVAAsAAAABABIAAAAVAAwAAAABABMAAAAVAAoAAAAFAAQAAAAYAAYAAAAFAAUAAAAbAAUAAAAFAAYAAAAbAAYAAAAGAAQAAAAZAAYAAAAGAAUAAAAcAAUAAAAGAAYAAAAcAAYAAAAHAAQAAAAaAAYAAAAHAAUAAAAdAAUAAAAHAAYAAAAdAAYAAAAIAAQAAAAbAAYAAAAIAAUAAAAeAAUAAAAIAAYAAAAeAAYAAAAJAAQAAAAcAAYAAAAJAAUAAAAfAAUAAAAJAAYAAAAfAAYAAAAKAAQAAAAdAAYAAAAKAAUAAAAgAAUAAAAKAAYAAAAgAAYAAAALAAQAAAAeAAYAAAALAAUAAAAhAAUAAAALAAYAAAAhAAYAAAAMAAQAAAAfAAYAAAAMAAUAAAAiAAUAAAAMAAYAAAAiAAYAAAANAAQAAAAgAAYAAAANAAUAAAAjAAUAAAANAAYAAAAjAAYAAAAOAAQAAAAhAAYAAAAOAAUAAAAkAAUAAAAOAAYAAAAkAAYAAAAPAAQAAAAiAAYAAAAPAAUAAAAlAAUAAAAPAAYAAAAlAAYAAAAQAAQAAAAjAAYAAAAQAAUAAAAmAAUAAAAQAAYAAAAmAAYAAAARAAQAAAAkAAYAAAARAAUAAAAnAAUAAAARAAYAAAAnAAYAAAASAAQAAAAlAAYAAAASAAUAAAAoAAUAAAASAAYAAAAoAAYAAAATAAQAAAAYAAUAAAATAAUAAAApAAUAAAATAAYAAAApAAYAAAAUAAQAAAAZAAUAAAAUAAUAAAAqAAUAAAAUAAYAAAAqAAYAAAAVAAQAAAAaAAUAAAAVAAUAAAArAAUAAAAVAAYAAAArAAYAAAAWAAQAAAAbAAUAAAAWAAUAAAAsAAUAAAAWAAYAAAAsAAYAAAAXAAQAAAAcAAUAAAAXAAUAAAAZAAUAAAAXAAYAAAAZAAYAAAAYAAQAAAAdAAUAAAAYAAUAAAAaAAUAAAAYAAYAAAAaAAYAAAAZAAQAAAAeAAUAAAAZAAUAAAAbAAUAAAAZAAYAAAAbAAYAAAATAAcAAAApAAcAAAAUAAcAAAAqAAcAAAAVAAcAAAArAAcAAAAWAAcAAAAsAAcAAAAXAAcAAAAZAAUAAAAYAAcAAAAaAAUAAAAZAAcAAAAbAAUAAAAaAAQAAAAfAAUAAAAaAAUAAAAcAAUAAAAaAAYAAAAcAAYAAAAaAAcAAAAcAAUAAAAbAAQAAAAgAAUAAAAbAAUAAAAdAAUAAAAbAAYAAAAdAAYAAAAbAAcAAAAdAAUAAAAcAAQAAAAhAAUAAAAcAAUAAAAeAAUAAAAcAAYAAAAeAAYAAAAcAAcAAAAeAAUAAAAdAAQAAAAiAAUAAAAdAAUAAAAfAAUAAAAdAAYAAAAfAAYAAAAdAAcAAAAfAAUAAAAeAAQAAAAjAAUAAAAeAAUAAAAgAAUAAAAeAAYAAAAgAAYAAAAeAAcAAAAgAAUAAAAfAAQAAAAkAAUAAAAfAAUAAAAhAAUAAAAfAAYAAAAhAAYAAAAfAAcAAAAhAAUAAAAgAAQAAAAlAAUAAAAgAAUAAAAiAAUAAAAgAAYAAAAiAAYAAAAgAAcAAAAiAAUAAAAhAAQAAAAmAAUAAAAhAAUAAAAjAAUAAAAhAAYAAAAjAAYAAAAhAAcAAAAjAAUAAAAiAAQAAAAnAAUAAAAiAAUAAAAkAAUAAAAiAAYAAAAkAAYAAAAiAAcAAAAkAAUAAAAjAAQAAAAoAAUAAAAjAAUAAAAlAAUAAAAjAAYAAAAlAAYAAAAjAAcAAAAlAAUAAAAkAAQAAAApAAUAAAAkAAUAAAAmAAUAAAAkAAYAAAAmAAYAAAAkAAcAAAAmAAUAAAAlAAQAAAAqAAUAAAAlAAUAAAAnAAUAAAAlAAYAAAAnAAYAAAAlAAcAAAAnAAUAAAAmAAQAAAArAAUAAAAmAAUAAAAoAAUAAAAmAAYAAAAoAAYAAAAmAAcAAAAoAAUAAAAnAAQAAAAsAAUAAAAnAAUAAAApAAUAAAAnAAYAAAApAAYAAAAnAAcAAAApAAUAAAAWAAgAAAAsAAgAAAAXAAgAAAAZAAUAAAAYAAgAAAAaAAUAAAAZAAgAAAAbAAUAAAAaAAgAAAAcAAUAAAAbAAgAAAAdAAUAAAAcAAgAAAAeAAUAAAAdAAgAAAAfAAUAAAAeAAgAAAAgAAUAAAAfAAgAAAAhAAUAAAAgAAgAAAAiAAUAAAAhAAgAAAAjAAUAAAAiAAgAAAAkAAUAAAAjAAgAAAAlAAUAAAAkAAgAAAAmAAUAAAAlAAgAAAAnAAUAAAAmAAgAAAAoAAUAAAAnAAgAAAApAAUAAAAoAAYAAAAqAAYAAAAoAAcAAAAqAAUAAAAoAAgAAAAqAAUAAAApAAYAAAArAAYAAAApAAcAAAArAAUAAAApAAgAAAArAAUAAAAWAAkAAAAsAAgAAAAWAAoAAAAsAAcAAAAXAAkAAAAZAAYAAAAXAAoAAAAZAAcAAAAYAAkAAAAaAAYAAAAYAAoAAAAaAAcAAAAZAAkAAAAbAAYAAAAZAAoAAAAbAAcAAAAaAAkAAAAcAAYAAAAaAAoAAAAcAAcAAAAbAAkAAAAdAAYAAAAbAAoAAAAdAAcAAAAcAAkAAAAeAAYAAAAcAAoAAAAeAAcAAAAdAAkAAAAfAAYAAAAdAAoAAAAfAAcAAAAeAAkAAAAgAAYAAAAeAAoAAAAgAAcAAAAfAAkAAAAhAAYAAAAfAAoAAAAhAAcAAAAgAAkAAAAiAAYAAAAgAAoAAAAiAAcAAAAhAAkAAAAjAAYAAAAhAAoAAAAjAAcAAAAiAAkAAAAkAAYAAAAiAAoAAAAkAAcAAAAjAAkAAAAlAAYAAAAjAAoAAAAlAAcAAAAkAAkAAAAmAAYAAAAkAAoAAAAmAAcAAAAlAAkAAAAnAAYAAAAlAAoAAAAnAAcAAAAmAAkAAAAoAAYAAAAmAAoAAAAoAAcAAAAnAAkAAAApAAYAAAAnAAoAAAApAAcAAAAoAAkAAAAqAAYAAAAoAAoAAAAqAAcAAAApAAkAAAArAAYAAAApAAoAAAArAAcAAAAWAAsAAAAsAAgAAAAXAAsAAAAsAAUAAAAYAAsAAAAmAAUAAAAZAAsAAAAnAAUAAAAaAAsAAAAoAAUAAAAbAAsAAAApAAUAAAAcAAsAAAAqAAUAAAAdAAsAAAArAAUAAAAeAAsAAAAsAAUAAAAfAAsAAAAhAAUAAAAgAAsAAAAiAAUAAAAhAAsAAAAjAAUAAAAiAAsAAAAkAAUAAAAjAAsAAAAlAAUAAAAkAAsAAAAmAAUAAAAlAAsAAAAnAAUAAAAmAAsAAAAoAAUAAAAnAAsAAAApAAUAAAAoAAsAAAAqAAUAAAApAAsAAAArAAUAAAAWAAwAAAAsAAYAAAAWAA0AAAAsAAcAAAAWAA4AAAAbAAgAAAAXAAwAAAAsAAYAAAAXAA0AAAAsAAcAAAAXAA4AAAAcAAgAAAAYAAwAAAAmAAYAAAAYAA0AAAAmAAcAAAAYAA4AAAAdAAgAAAAZAAwAAAAnAAYAAAAZAA0AAAAnAAcAAAAZAA4AAAAeAAgAAAAaAAwAAAAoAAYAAAAaAA0AAAAoAAcAAAAaAA4AAAAfAAgAAAAbAAwAAAApAAYAAAAbAA0AAAApAAcAAAAbAA4AAAAgAAgAAAAcAAwAAAAqAAYAAAAcAA0AAAAqAAcAAAAcAA4AAAAhAAgAAAAdAAwAAAArAAYAAAAdAA0AAAArAAcAAAAdAA4AAAAiAAgAAAAeAAwAAAAsAAYAAAAeAA0AAAAsAAcAAAAeAA4AAAAjAAgAAAAfAAwAAAAhAAYAAAAfAA0AAAAhAAcAAAAfAA4AAAAkAAgAAAAgAAwAAAAiAAYAAAAgAA0AAAAiAAcAAAAgAA4AAAAlAAgAAAAhAAwAAAAjAAYAAAAhAA0AAAAjAAcAAAAhAA4AAAAmAAgAAAAiAAwAAAAkAAYAAAAiAA0AAAAkAAcAAAAiAA4AAAAnAAgAAAAjAAwAAAAlAAYAAAAjAA0AAAAlAAcAAAAjAA4AAAAoAAgAAAAkAAwAAAAmAAYAAAAkAA0AAAAmAAcAAAAkAA4AAAApAAgAAAAlAAwAAAAnAAYAAAAlAA0AAAAnAAcAAAAlAA4AAAAqAAgAAAAmAAwAAAAoAAYAAAAmAA0AAAAoAAcAAAAmAA4AAAArAAgAAAAnAAwAAAApAAYAAAAnAA0AAAApAAcAAAAnAA4AAAAsAAgAAAAoAAwAAAAqAAYAAAAoAA0AAAAqAAcAAAAoAA4AAAAtAAgAAAApAAwAAAArAAYAAAApAA0AAAArAAcAAAApAA4AAAAuAAgAAAAKAAsAAAAgAAgAAAAKAAwAAAAgAAYAAAAKAA0AAAAgAAcAAAAKAA4AAAAfAAgAAAALAAsAAAAhAAgAAAALAAwAAAAhAAYAAAALAA0AAAAhAAcAAAALAA4AAAAXAAgAAAAMAAsAAAAiAAgAAAAMAAwAAAAiAAYAAAAMAA0AAAAiAAcAAAAMAA4AAAAYAAgAAAANAAsAAAAjAAgAAAANAAwAAAAjAAYAAAANAA0AAAAjAAcAAAANAA4AAAAZAAgAAAAOAAsAAAAkAAgAAAAOAAwAAAAkAAYAAAAOAA0AAAAkAAcAAAAOAA4AAAAaAAgAAAAPAAsAAAAlAAgAAAAPAAwAAAAlAAYAAAAPAA0AAAAlAAcAAAAPAA4AAAAbAAgAAAAQAAsAAAAmAAgAAAAQAAwAAAAmAAYAAAAQAA0AAAAmAAcAAAAQAA4AAAAcAAgAAAARAAsAAAAnAAgAAAARAAwAAAAnAAYAAAARAA0AAAAnAAcAAAARAA4AAAAdAAgAAAASAAsAAAAoAAgAAAASAAwAAAAoAAYAAAASAA0AAAAoAAcAAAASAA4AAAAXAAgAAAATAAsAAAApAAgAAAATAAwAAAApAAYAAAATAA0AAAApAAcAAAATAA4AAAAYAAgAAAAUAAsAAAAqAAgAAAAUAAwAAAAqAAYAAAAUAA0AAAAqAAcAAAAUAA4AAAAZAAgAAAAVAAsAAAArAAgAAAAVAAwAAAArAAYAAAAVAA0AAAArAAcAAAAVAA4AAAAaAAgAAAADAAsAAAAZAAgAAAADAAwAAAAZAAYAAAADAA0AAAAZAAcAAAADAA4AAAAYAAgAAAAEAAsAAAAaAAgAAAAEAAwAAAAaAAYAAAAEAA0AAAAaAAcAAAAEAA4AAAAZAAgAAAAFAAsAAAAbAAgAAAAFAAwAAAAbAAYAAAAFAA0AAAAbAAcAAAAFAA4AAAAaAAgAAAAGAAsAAAAcAAgAAAAGAAwAAAAcAAYAAAAGAA0AAAAcAAcAAAAGAA4AAAAbAAgAAAAHAAsAAAAdAAgAAAAHAAwAAAAdAAYAAAAHAA0AAAAdAAcAAAAHAA4AAAAcAAgAAAAIAAsAAAAeAAgAAAAIAAwAAAAeAAYAAAAIAA0AAAAeAAcAAAAIAA4AAAAdAAgAAAAJAAsAAAAfAAgAAAAJAAwAAAAfAAYAAAAJAA0AAAAfAAcAAAAJAA4AAAAeAAgAAAACAAsAAAAYAAgAAAACAAwAAAAYAAYAAAACAA0AAAAYAAcAAAACAA4AAAAXAAgAAAACAAgAAAAYAAgAAAACAAkAAAAYAAgAAAACAAoAAAAYAAcAAAADAAgAAAAZAAgAAAADAAkAAAAZAAgAAAADAAoAAAAZAAcAAAAEAAgAAAAaAAgAAAAEAAkAAAAaAAgAAAAEAAoAAAAaAAcAAAAFAAgAAAAbAAgAAAAFAAkAAAAbAAgAAAAFAAoAAAAbAAcAAAAGAAgAAAAcAAgAAAAGAAkAAAAcAAgAAAAGAAoAAAAcAAcAAAAHAAgAAAAdAAgAAAAHAAkAAAAdAAgAAAAHAAoAAAAdAAcAAAAIAAgAAAAeAAgAAAAIAAkAAAAeAAgAAAAIAAoAAAAeAAcAAAAJAAgAAAAfAAgAAAAJAAkAAAAfAAgAAAAJAAoAAAAfAAcAAAAKAAgAAAAgAAgAAAAKAAkAAAAgAAgAAAAKAAoAAAAgAAcAAAALAAgAAAAhAAgAAAALAAkAAAAhAAgAAAALAAoAAAAhAAcAAAAMAAgAAAAiAAgAAAAMAAkAAAAiAAgAAAAMAAoAAAAiAAcAAAANAAgAAAAjAAgAAAANAAkAAAAjAAgAAAANAAoAAAAjAAcAAAAOAAgAAAAkAAgAAAAOAAkAAAAkAAgAAAAOAAoAAAAkAAcAAAAPAAgAAAAlAAgAAAAPAAkAAAAlAAgAAAAPAAoAAAAlAAcAAAAQAAgAAAAmAAgAAAAQAAkAAAAmAAgAAAAQAAoAAAAmAAcAAAARAAgAAAAnAAgAAAARAAkAAAAnAAgAAAARAAoAAAAnAAcAAAASAAgAAAAoAAgAAAASAAkAAAAoAAgAAAASAAoAAAAoAAcAAAATAAgAAAApAAgAAAATAAkAAAApAAgAAAATAAoAAAApAAcAAAAUAAgAAAAqAAgAAAAUAAkAAAAqAAgAAAAUAAoAAAAqAAcAAAAVAAgAAAArAAgAAAAVAAkAAAArAAgAAAAVAAoAAAArAAcAAAACAAYAAAAYAAYAAAACAAcAAAAYAAcAAAADAAYAAAAZAAYAAAADAAcAAAAZAAcAAAAEAAYAAAAaAAYAAAAEAAcAAAAaAAcAAAAFAAcAAAAbAAcAAAAGAAcAAAAcAAcAAAAHAAcAAAAdAAcAAAAIAAcAAAAeAAcAAAAJAAcAAAAfAAcAAAAKAAcAAAAgAAcAAAALAAcAAAAhAAcAAAAMAAcAAAAiAAcAAAANAAcAAAAjAAcAAAAOAAcAAAAkAAcAAAAPAAcAAAAlAAcAAAAQAAcAAAAmAAcAAAARAAcAAAAnAAcAAAASAAcAAAAoAAcAAAACAA8AAAAXAAkAAAACABAAAAAXAAoAAAACABEAAAAXAAsAAAACABIAAAAbAAoAAAADAA8AAAAYAAkAAAADABAAAAAYAAoAAAADABEAAAAYAAsAAAADABIAAAAcAAoAAAAEAA8AAAAZAAkAAAAEABAAAAAZAAoAAAAEABEAAAAZAAsAAAAEABIAAAAdAAoAAAAFAA8AAAAaAAkAAAAFABAAAAAaAAoAAAAFABEAAAAaAAsAAAAFABIAAAAeAAoAAAAGAA8AAAAbAAkAAAAGABAAAAAbAAoAAAAGABEAAAAbAAsAAAAGABIAAAAfAAoAAAAHAA8AAAAcAAkAAAAHABAAAAAcAAoAAAAHABEAAAAcAAsAAAAHABIAAAAgAAoAAAAIAA8AAAAdAAkAAAAIABAAAAAdAAoAAAAIABEAAAAdAAsAAAAIABIAAAAhAAoAAAAJAA8AAAAeAAkAAAAJABAAAAAeAAoAAAAJABEAAAAeAAsAAAAJABIAAAAiAAoAAAAKAA8AAAAfAAkAAAAKABAAAAAfAAoAAAAKABEAAAAfAAsAAAAKABIAAAAjAAoAAAALAA8AAAAXAAkAAAALABAAAAAXAAoAAAALABEAAAAXAAsAAAALABIAAAAkAAoAAAAMAA8AAAAYAAkAAAAMABAAAAAYAAoAAAAMABEAAAAYAAsAAAAMABIAAAAlAAoAAAANAA8AAAAZAAkAAAANABAAAAAZAAoAAAANABEAAAAZAAsAAAANABIAAAAmAAoAAAAOAA8AAAAaAAkAAAAOABAAAAAaAAoAAAAOABEAAAAaAAsAAAAOABIAAAAnAAoAAAAPAA8AAAAbAAkAAAAPABAAAAAbAAoAAAAPABEAAAAbAAsAAAAPABIAAAAbAAoAAAAQAA8AAAAcAAkAAAAQABAAAAAcAAoAAAAQABEAAAAcAAsAAAAQABIAAAAcAAoAAAARAA8AAAAdAAkAAAARABAAAAAdAAoAAAARABEAAAAdAAsAAAARABIAAAAdAAoAAAASAA8AAAAXAAkAAAASABAAAAAXAAoAAAASABEAAAAXAAsAAAASABIAAAAeAAoAAAATAA8AAAAYAAkAAAATABAAAAAYAAoAAAATABEAAAAYAAsAAAATABIAAAAbAAoAAAAUAA8AAAAZAAkAAAAUABAAAAAZAAoAAAAUABEAAAAZAAsAAAAUABIAAAAcAAoAAAAVAA8AAAAaAAkAAAAVABAAAAAaAAoAAAAVABEAAAAaAAsAAAAVABIAAAAdAAoAAAAWAA8AAAAbAAkAAAAWABAAAAAbAAoAAAAWABEAAAAbAAsAAAAWABIAAAAeAAoAAAAXAA8AAAAcAAkAAAAXABAAAAAcAAoAAAAXABEAAAAcAAsAAAAXABIAAAAfAAoAAAAYAA8AAAAdAAkAAAAYABAAAAAdAAoAAAAYABEAAAAdAAsAAAAYABIAAAAbAAoAAAAZAA8AAAAeAAkAAAAZABAAAAAeAAoAAAAZABEAAAAeAAsAAAAZABIAAAAcAAoAAAAaAA8AAAAfAAkAAAAaABAAAAAfAAoAAAAaABEAAAAfAAsAAAAbAA8AAAAgAAkAAAAbABAAAAAgAAoAAAAbABEAAAAgAAsAAAAcAA8AAAAhAAkAAAAcABAAAAAhAAoAAAAcABEAAAAhAAsAAAAdAA8AAAAiAAkAAAAdABAAAAAiAAoAAAAdABEAAAAiAAsAAAAeAA8AAAAjAAkAAAAeABAAAAAjAAoAAAAeABEAAAAjAAsAAAAfAA8AAAAkAAkAAAAfABAAAAAkAAoAAAAfABEAAAAkAAsAAAAgAA8AAAAlAAkAAAAgABAAAAAlAAoAAAAgABEAAAAlAAsAAAAhAA8AAAAmAAkAAAAhABAAAAAmAAoAAAAhABEAAAAmAAsAAAAiAA8AAAAnAAkAAAAiABAAAAAnAAoAAAAiABEAAAAnAAsAAAAjAA8AAAAoAAkAAAAjABAAAAAoAAoAAAAjABEAAAAoAAsAAAAkAA8AAAApAAkAAAAkABAAAAApAAoAAAAkABEAAAApAAsAAAAlAA8AAAAqAAkAAAAlABAAAAAqAAoAAAAlABEAAAAqAAsAAAAmAA8AAAArAAkAAAAmABAAAAArAAoAAAAmABEAAAArAAsAAAAnAA8AAAAsAAkAAAAnABAAAAAsAAoAAAAnABEAAAAsAAsAAAAoAA8AAAAtAAkAAAAoABAAAAAtAAoAAAAoABEAAAAtAAsAAAApAA8AAAAuAAkAAAApABAAAAAuAAoAAAApABEAAAAuAAsAAAACABMAAAAWAAoAAAADABMAAAAcAAsAAAAEABMAAAAdAAsAAAAFABMAAAAeAAsAAAAGABMAAAAfAAsAAAAHABMAAAAgAAsAAAAIABMAAAAhAAsAAAAJABMAAAAiAAsAAAAKABMAAAAjAAsAAAALABMAAAAkAAsAAAAMABMAAAAlAAsAAAANABMAAAAmAAsAAAAOABMAAAAnAAsAAAAPABMAAAAbAAsAAAAQABMAAAAcAAsAAAARABMAAAAdAAsAAAASABMAAAAeAAsAAAATABMAAAAbAAsAAAAUABMAAAAcAAsAAAAVABMAAAAdAAsAAAAWABMAAAAeAAsAAAAXABMAAAAfAAsAAAAYABMAAAAbAAsAAAAZABMAAAAcAAsAAAAaABIAAAAdAAoAAAAaABMAAAAdAAsAAAAbABIAAAAbAAoAAAAbABMAAAAbAAsAAAAcABIAAAAcAAoAAAAcABMAAAAcAAsAAAAdABIAAAAdAAoAAAAdABMAAAAdAAsAAAAeABIAAAAeAAoAAAAeABMAAAAeAAsAAAAfABIAAAAfAAoAAAAfABMAAAAfAAsAAAAgABIAAAAgAAoAAAAgABMAAAAgAAsAAAAhABIAAAAhAAoAAAAhABMAAAAhAAsAAAAiABIAAAAiAAoAAAAiABMAAAAiAAsAAAAjABIAAAAjAAoAAAAjABMAAAAjAAsAAAAkABIAAAAkAAoAAAAkABMAAAAkAAsAAAAlABIAAAAlAAoAAAAlABMAAAAlAAsAAAAmABIAAAAmAAoAAAAmABMAAAAmAAsAAAAnABIAAAAnAAoAAAAnABMAAAAnAAsAAAAoABIAAAAoAAoAAAAoABMAAAAoAAsAAAApABIAAAApAAoAAAApABMAAAApAAsAAAA=")
tile_set = ExtResource("4_hoy6d")

[node name="SettingsBackground" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 310.0
offset_top = 120.0
offset_right = 1023.0
offset_bottom = 506.0
texture = ExtResource("3_batpm")

[connection signal="value_changed" from="CanvasLayer/MarginContainer/VBoxContainer/Audio" to="." method="_on_audio_value_changed"]
[connection signal="value_changed" from="CanvasLayer/MarginContainer/VBoxContainer/Musica" to="." method="_on_musica_value_changed"]
[connection signal="value_changed" from="CanvasLayer/MarginContainer/VBoxContainer/Efectos" to="." method="_on_efectos_value_changed"]
